# luasqlgen

./: .gitmodules  LICENSE  TestDesign.lua  common.lua  luasqlgen.lua  mariadb.lua  sql.lua  sqlite.lua
cpp/: DatabaseConnection.h  MariaDBConnection.h  ODBCConnection.h  SQLiteConnection.h
test/: CMakeLists.txt  main.cpp
